# mob

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  bootstrap.bat  bootstrap.ps1  mob.ini  readme.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  linting.yml
custom-ports/zlib/: vcpkg.json
custom-triplets/: x64-windows-static-md.cmake
licenses/: 7zip.txt  ValveFileVDF.txt  spdlog.txt
patches/7z/: 7zip.mak.patch  Build.mak.patch
patches/7z/sources/: Build.mak.patch
patches/boost/sources/: vswhere.cmd.patch
patches/ncc/sources/: publish.bat.patch
patches/pyqt/: builder.py.manual_patch
patches/python/sources/: openssl.props.patch
scripts/: make-boost-prebuilt.ps1  make-pyqt-prebuilt.ps1  make-python-prebuilt.ps1
src/: CMakeLists.txt  commands.cpp  commands.h  conf.cpp  conf.h  context.cpp  context.h  env.cpp  env.h  main.cpp  net.cpp  net.h  op.cpp  op.h  pch.cpp  pch.h  process.cpp  process.h  tools.cpp  tools.h  utility.cpp  utility.h
src/cmd/: build.cpp  cmake.cpp  cmake_config.cpp  commands.cpp  commands.h  git.cpp  list.cpp  pr.cpp  release.cpp  tx.cpp
src/core/: conf.cpp  conf.h  context.cpp  context.h  env.cpp  env.h  formatters.h  ini.cpp  ini.h  op.cpp  op.h  paths.cpp  paths.h  pipe.cpp  pipe.h  process.cpp  process.h
src/tasks/: boost.cpp  boost_di.cpp  bzip2.cpp  dds.cpp  directxtex.cpp  explorerpp.cpp  fmt.cpp  gtest.cpp  installer.cpp  libbsarch.cpp  libffi.cpp  libloot.cpp  licenses.cpp  lz4.cpp  lzokay.cpp  modorganizer.cpp  ncc.cpp  nmm.cpp  openssl.cpp  pybind11.cpp  pyqt.cpp  python.cpp  sevenz.cpp  sip.cpp  spdlog.cpp  stylesheets.cpp  task.cpp  task.h  task_manager.cpp  task_manager.h  tasks.h  translations.cpp  usvfs.cpp  zlib.cpp
src/tools/: cmake.cpp  cmake.h  downloader.cpp  extractor.cpp  git.cpp  git.h  jom.cpp  msbuild.cpp  msbuild.h  nmake.cpp  patcher.cpp  process_runner.cpp  python.cpp  tools.cpp  tools.h
src/utility/: algo.h  assert.cpp  assert.h  enum.h  fs.cpp  fs.h  io.cpp  io.h  pch.h  string.cpp  string.h  threading.cpp  threading.h
vs/: builder.sln  builder.vcxproj  builder.vcxproj.filters  debug.props  mob.sln  mob.vcxproj  mob.vcxproj.filters  props.props  release.props
